[gd_scene load_steps=5 format=3 uid="uid://dgcuco5cw2for"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_o2ihx"]
[ext_resource type="Texture2D" uid="uid://b82tovd4b4w76" path="res://art/Hud/Health_Bar/greenbar (1).png" id="2_icjt0"]
[ext_resource type="Texture2D" uid="uid://c70q2gafd01de" path="res://art/Hud/Health_Bar/greenbar (3).png" id="4_bq41h"]
[ext_resource type="FontFile" uid="uid://dm0wl8wvl7rtj" path="res://fonts/HalloweenSlimePersonalUse-4B80D.otf" id="4_fv7ny"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2ihx")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -161.0
offset_right = 146.0
offset_bottom = -16.0
grow_vertical = 0
scale = Vector2(2, 2)
max_value = 200.0
value = 100.0
texture_under = ExtResource("4_bq41h")
texture_progress = ExtResource("2_icjt0")
texture_progress_offset = Vector2(0, 30)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 25.0
offset_right = 118.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_fv7ny")
theme_override_font_sizes/font_size = 50
text = "00:00"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1200.0
one_shot = true
autostart = true

[node name="Coin" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -148.0
offset_top = 18.0
offset_right = -20.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_fv7ny")
theme_override_font_sizes/font_size = 50
text = "Coins:0"

[node name="Gate" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -72.0
offset_right = 110.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_fv7ny")
theme_override_font_sizes/font_size = 50
text = "GATE UNLOCKED"

[node name="Fly_Pickup" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -714.0
offset_top = -72.0
offset_right = -308.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_fv7ny")
theme_override_font_sizes/font_size = 50
text = "Fly JUmPS:"

[node name="Shield" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -106.0
offset_right = 425.0
offset_bottom = -61.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_fv7ny")
theme_override_font_sizes/font_size = 30
text = "Force Field  Available"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
